--- a/wmp-fe-2/public/index.html
+++ b/wmp-fe-2/public/index.html
@@ -23,6 +23,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link href='https://fonts.googleapis.com/css?family=Abhaya Libre' rel='stylesheet'>
+    <link rel="stylesheet" type="text/css" href="path/to/notifications.css">
+
     <title>Water My Plants</title>
   </head>
   <body>
